Ajout du 1er menu de stat

--- a/GSB_java/bin/.gitignore
+++ b/GSB_java/bin/.gitignore
@@ -1,6 +1,8 @@
+/Princ.class
 /Test/
 /com/
+/hibernate.cfg.xml
+/layout/
+/modele/
 /vue/
-/CustomDialog$1.class
-/CustomDialog$2.class
-/CustomDialog.class
+/propin.class
